# chanjingAI-ComfyUI

./: LICENSE  README.md  __init__.py  config.example.json  nodes.py  pyproject.toml  requirements.txt  插件能力许可协议.docx
js/: cicada_video_player.js
workflow/: cicada声音克隆.json  声音克隆+对口型.json  音频对口型.json
